--- a/index2.html
+++ b/index2.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    test
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>xm</title><link href=/static/css/app.8be8a7382180649d497a814c6df497e3.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=/static/js/vendor.546bc75dc3980a8700d1.js></script><script type=text/javascript src=/static/js/app.1896633f945f9a4f2809.js></script></body></html>
